Arbore de decizie modificat

--- a/Decision_Tree_Pacman.ipynb
+++ b/Decision_Tree_Pacman.ipynb
@@ -211,7 +211,7 @@
         "\n",
         "tree_dot = export_graphviz(decision_tree, filled = True)\n",
         "graph = graphviz.Source(tree_dot)\n",
-        "graph\n"
+        "graph"
       ],
       "execution_count": 7,
       "outputs": [
